Fixing the deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Pre-requisites
         run: |
-          pip install --upgrade pip setuptools
+          pip install --upgrade pip setuptools build
           pip install '.[publishing]'
 
       - name: Build
